--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,10 @@ html {
   height: 100%
 }
 
+button {
+  background: transparent;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
